--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <h1>Die TOSS tournament</h1>
       <div class="block">
         <h2 class="player-1">Player 1</h2>
